[package]
name = "static_map"
version = "0.2.0-beta"
repository = "https://github.com/cbreeden/static-map"
description = "A static hashmap implementation, based on the Round-Robin hashing algorithm found in rustc."
documentation = "https://docs.rs/static_map"
readme = "../README.md"
keywords = [ "hash", "hashmap", "map", "static" ]
categories = [ "data-structures" ]
license = "Apache-2.0/MIT"
authors = ["Christopher Breeden <github@u.breeden.cc>"]

[dependencies]
fxhash = "0.2.1"
static_map_macros = {version="0.2.0-beta", path="../static_map_macros"}