[package]
name = "static_map_macros"
version = "0.1.1"
repository = "https://github.com/cbreeden/static-map"
description = "Procedural macro used for static_map."
documentation = "https://docs.rs/static_map"
readme = "../README.md"
keywords = [ "hash", "hashmap", "map", "static" ]
categories = [ "data-structures" ]
license = "Apache-2.0/MIT"
authors = ["Christopher Breeden <github@u.breeden.cc>"]

[dependencies]
syn = "0.11"
quote = "0.3"
fxhash = "0.2"

[dev-dependencies]
static_map = { version = "0.1", path = "../static_map" }
phf = "0.7"
phf_macros = "0.7"
seahash = "3.0"

[lib]
proc-macro = true