[package]
name = "static_map_macros"
version = "0.2.0-beta"
repository = "https://github.com/cbreeden/static-map"
description = "Procedural macro used for static_map."
documentation = "https://docs.rs/static_map"
readme = "../README.md"
keywords = [ "hash", "hashmap", "map", "static" ]
categories = [ "data-structures" ]
license = "Apache-2.0/MIT"
authors = ["Christopher Breeden <github@u.breeden.cc>"]

[dependencies]
syn = "0.11"
quote = "0.3"
fxhash = "0.2.1"

[dev-dependencies]
static_map = "0.2.0-alpha"
phf = "0.7"
phf_macros = "0.7"
seahash = "3.0"

[lib]
proc-macro = true