[package]
name = "staticmap_macros"
version = "0.1.0"
authors = ["Christopher Breeden <github@u.breeden.cc>"]

[dependencies]
syn = "0.11"
quote = "0.3"
itoa = "0.3"
fxhash = "0.1"
staticmap = { path = "../staticmap" }
time = "*"


[dev-dependencies]
phf = "0.7"
phf_macros = "0.7"
seahash = "3.0"

[lib]
proc-macro = true